# FindMyGroup

./: .gitignore  README.md  docker-compose.yml
api/: .env  .test.env  Cargo.toml  README.md  diesel.toml  package-lock.json  package.json
api/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
api/migrations/2021-10-10-120522_create_area/: down.sql  up.sql
api/migrations/2021-10-10-120546_create_group/: down.sql  up.sql
api/migrations/2021-10-10-120552_create_member/: down.sql  up.sql
api/migrations/2021-10-10-120605_create_location/: down.sql  up.sql
api/src/: api_error.rs  app.module.ts  constants.rs  db.rs  group.rs  main.rs  main.ts  schema.rs
api/src/area/: area.module.ts  area.service.ts
api/src/area/entities/: area.entity.ts
api/src/common/config/: configuration.ts  validation.ts
api/src/common/dto/: latlong.dto.ts
api/src/group/: group.controller.ts  group.module.ts  group.service.ts  model.rs  routes.rs
api/src/group/dto/: get-group.dto.ts  group.dto.ts
api/src/group/entities/: group.entity.ts
api/src/group/interfaces/: group-with-latlong.interface.ts
api/src/location/: location.module.ts  location.service.ts
api/src/location/dto/: update-location.dto.ts
api/src/location/entities/: location.entity.ts
api/src/location/interfaces/: location-lat-long.interface.ts
api/src/member/: member.module.ts  member.service.ts
api/src/member/dto/: create-member.dto.ts
api/src/member/entities/: member.entity.ts
app/: .eslintrc.js  App.tsx  app.json  package-lock.json  package.json
database/: Dockerfile  init.sql
(+23 files in other folders)
