[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2"
actix-web = "3"
serde = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.9"
postgis = "0.9"
postgis_diesel = "0.1"
diesel = { version = "1", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15"
r2d2 = "0.8"
r2d2-diesel = "1"
