[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.0"
serde = "1"
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.9"
postgres = "0.19"
postgis = "0.9"
dotenv = "0.15"
r2d2 = "0.8"
r2d2_postgres = "0.18"
lazy_static = "1.4"
