[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3"
serde = "1"
serde_json = "1"
json = "0.12"
uuid = { version = "0.8", features = ["serde", "v4"] }
postgres = "0.19"
postgis = "0.9"
r2d2 = "0.8"
r2d2_postgres = "0.18"
lazy_static = "1.4"
